<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dimgray">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="24sp"
                    android:textColor="@color/maroon"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/maroon"
                    android:hint="@string/etname"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:id="@+id/etName"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="24sp"
                    android:textColor="@color/maroon"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/maroon"
                    android:hint="@string/etEmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"
                    android:id="@+id/etCorreo"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tel"
                    android:textSize="24sp"
                    android:textColor="@color/maroon"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/maroon"
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/etTel"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"
                    android:id="@+id/etTelefono"/>

            </LinearLayout>

        </LinearLayout>
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas"
                android:textColor="@color/maroon"
                android:onClick="Wsex"
                android:id="@+id/rbMas"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fem"
                android:textColor="@color/maroon"
                android:onClick="Wsex"
                android:id="@+id/rbFem"/>

        </RadioGroup>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ciu"
                android:textSize="24sp"
                android:textColor="@color/maroon"
                android:layout_gravity="center"
                android:layout_weight="2"/>
            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="27dp"
                android:spinnerMode="dropdown"
                android:background="@color/maroon"
                android:drawSelectorOnTop="true"
                android:entries="@array/ciudades"
                android:id="@+id/spin"
                android:layout_weight="1">

            </Spinner>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/hob"
                    android:layout_gravity="center"
                    android:textColor="@color/maroon"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fut"
                    android:textSize="12sp"
                    android:textColor="@color/maroon"
                    android:onClick="cbHob"
                    android:id="@+id/cbFut"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gui"
                    android:textSize="12sp"
                    android:textColor="@color/maroon"
                    android:onClick="cbHob"
                    android:id="@+id/cbGui"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lee"
                    android:textSize="12sp"
                    android:textColor="@color/maroon"
                    android:onClick="cbHob"
                    android:id="@+id/cbLee"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Tele"
                    android:textSize="12sp"
                    android:textColor="@color/maroon"
                    android:onClick="cbHob"
                    android:id="@+id/cbTele"
                    />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/maroon"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3">
                <DatePicker
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:spinnersShown="true"
                    android:scrollbarStyle="outsideOverlay"
                    android:id="@+id/dpBorn">

                </DatePicker>

            </LinearLayout>

        </LinearLayout>


        <Button
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:text="@string/bOk"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/maroon"
            android:background="@color/lightgoldenrodyellow"
            android:onClick="doIt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/greenyellow"
            android:id="@+id/tvNombre"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/greenyellow"
            android:id="@+id/tvCorreo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/greenyellow"
            android:id="@+id/tvTelefono"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tSex"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/greenyellow"
            android:id="@+id/tvSexo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciu"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/greenyellow"
            android:id="@+id/tvCiu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobmin"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/greenyellow"
            android:id="@+id/tvHob"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/greenyellow"
            android:id="@+id/tvDat"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/warn"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:id="@+id/warn"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
